# bet-grammar

./: bet.grammar  diag  mod.grammar  source.grammar  work.grammar
.helix/: config.toml
tree-sitter-bet/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package-lock.json  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-bet/bindings/c/: tree-sitter-bet.pc.in
tree-sitter-bet/bindings/c/tree_sitter/: tree-sitter-bet.h
tree-sitter-bet/bindings/go/: binding.go  binding_test.go
tree-sitter-bet/bindings/java/test/: TreeSitterBetTest.java
tree-sitter-bet/bindings/node/: binding.cc  index.d.ts  index.js
tree-sitter-bet/bindings/python/tests/: test_binding.py
tree-sitter-bet/bindings/python/tree_sitter_bet/: __init__.py  binding.c
tree-sitter-bet/bindings/rust/: build.rs  lib.rs
tree-sitter-bet/bindings/swift/TreeSitterBetTests/: TreeSitterBetTests.swift
tree-sitter-bet/bindings/zig/: root.zig  test.zig
tree-sitter-bet/queries/: highlights.scm
tree-sitter-bet/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-bet/test/corpus/: 00-base.txt  01-declaration.txt  02-element.txt  02-enum.txt  03-component.txt  04-element.txt  04-element_attr.txt  04-element_property.txt  05-style.txt  05-style_expression.txt  06-terminator.txt  06-top_level_element.txt  07-top_level_element.txt  08-terminator.txt  09-template_expression.txt  10-builtin.txt  10-keyword.txt  11-documentation.txt
tree-sitter-bet/test/highlight/: example.bet  tests.bet
(+110 files in other folders)
